--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <div id='write'>
         <h1>This is a Free Website</h1>
         <blockquote>
-            <p>This website was created by <a href='https://github.com/bohanjun' target='_blank' rel='external nofollow'>@bohanjun</a>.</p>
+            <p>This is a mould for Free Website created by <a href='https://github.com/bohanjun' target='_blank' rel='external nofollow'>@bohanjun</a>.</p>
             <p>Pages on <a href='https://github.com/' target='_blank' rel='external nofollow'>GitHub</a>,</p>
             <p>Domain by <a href='https://www.freenom.com/' target='_blank' rel='external nofollow'>Freenom</a>,</p>
             <p>CDN by <a href='https://www.cloudflare.com/' target='_blank' rel='external nofollow'>Cloudflare</a>.</p>
